--- a/templates/price.html
+++ b/templates/price.html
@@ -27,11 +27,11 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-          <div class="modal-header">
+          <div class="modal-header modal-header_tc">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h2 class="modal-title">Terms & Conditions</h2>
+            <h2 class="modal-title modal-title_tc">Terms & Conditions</h2>
           </div>
-          <div class="modal-body">
+          <div class="modal-body modal-body_tc">
               <p><b>1.1 PURCHASES</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
@@ -53,7 +53,7 @@
             aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
             fugiat nulla pariatur..</p>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer modal-footer_tc">
                 <h6>Any questions please email us at <a href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></h6>
             </div>
         </div>
