--- a/templates/About.html
+++ b/templates/About.html
@@ -6,66 +6,64 @@
     </div>
 
 
-    <div class="About-title"><p>Find out all about our team and the coffees we sell! Lorem ipsum dolor sit amet,
-        consectetur adipisicing elit, sed do eiusmod. <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    <div class="About-title"><p>Find out all about our team and the coffees we sell here at <b>Starbex</b>! Lorem ipsum
+        dolor sit amet,
+        consectetur adipisicing elit, sed do eiusmod. Lorem ipsum dolor sit amet, consectetur adipisicing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
         minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
         commodo consequat.</p>
     </div>
 
-
-    <div class="about-members">
-
-        <div class="col-sm-12">
-            <div>
-                <img class="members" src="../media/images/Barista1.jpg">
-            </div>
-            <div>
-                <h1>
-                    Bex Manning
-                </h1>
-                <p>
-                    Founder of <b>Starbex</b> and in charge of all the behind the scenes business. Ut enim ad
-                    minim veniam, quis nostrud exercitation ullamco laboris.
-                </p>
-            </div>
+    <div class="col-sm-12 text-center about-members">
+        <div class="col-sm-3">
+            <br>
+            <img class="members" src="../media/images/Barista1.jpg">
+            <h2>
+                Bex Manning
+            </h2>
+            <p>
+                Founder of <b>Starbex</b> and in charge of all the behind the scenes business. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris.
+            </p>
         </div>
-
-        <div class="col-sm-12">
-            <div>
-                <img class="members" src="../media/images/Barista2.jpg">
-            </div>
-            <div>
-                <h1>
-                    Miss Brewtiful
-                </h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                    incididunt ut labore. Ut enim ad minim veniam, quis nostrud.
-                </p>
-            </div>
+        <div class="col-sm-3">
+            <br>
+            <img class="members" src="../media/images/Barista4.jpg">
+            <h2>
+                Mr Beano
+            </h2>
+            <p>
+                Key member of <b>Starbex</b> in charge of sourcing the freshest and most interesting coffee products. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris.
+            </p>
         </div>
-
-        <div class="col-sm-12">
-            <div>
-                <img class="members" src="../media/images/Barista3.jpg">
-            </div>
-            <div>
-                <h1>
-                    Mr Fairtrade
-                </h1>
-                <p>
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                    commodo consequat. Lorem ipsum dolor sit amet.
-                </p>
-            </div>
+        <div class="col-sm-3">
+            <br>
+            <img class="members" src="../media/images/Barista2.jpg">
+            <h2>
+                Miss Brewtiful
+            </h2>
+            <p>
+                In charge of all the design and aesthetics for <b>Starbex</b> as well as coordinating weekly events. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+            </p>
+        </div>
+        <div class="col-sm-3">
+            <br>
+            <img class="members" src="../media/images/Barista3.jpg">
+            <h2>
+                Mr Fairtrade
+            </h2>
+            <p>
+                Head Barista of <b>Starbex</b> who all you regulars will be sure to know. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris.
+            </p>
         </div>
     </div>
 
     <div class="choices-coffee col-sm-12">
         <div class="col-lg-4 text-center">
             <h2>Coffees</h2>
-            <br>
             <p>As well as various Teas, Hot Chocolates and Soft Drinks, we have a selection of
                 Coffees. Here are some of the Coffees: <br>...but remember, we have a variety of specialties each
                 month.
@@ -86,39 +84,52 @@
 
             <div class="tab-content">
                 <div id="menu1" class="tab-pane fade in active">
-
-                    <div class="center-block"><p><b>Cappuccino</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Cappuccino.png">
+                    <div class="center-block"><span class="mobile-coffee-name">Cappuccino</span>
+                        <p><span>Cappuccino</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
+                                                                                                       src="../media/images/Cappuccino.png">
                     </div>
                 </div>
                 <div id="menu2" class="tab-pane fade">
-                    <div class="center-block"><p><b>Latte</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Latte.png">
+                    <div class="center-block"><span class="mobile-coffee-name">Latte</span>
+                        <p><span>Latte</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
+                                                                                                       src="../media/images/Latte.png">
                     </div>
                 </div>
                 <div id="menu3" class="tab-pane fade">
-                    <div class="center-block"><p><b>Mocha</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Mocha.png">
+                    <div class="center-block"><span class="mobile-coffee-name">Mocha</span>
+                        <p><span>Mocha</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
+                                                                                                       src="../media/images/Mocha.png">
                     </div>
                 </div>
                 <div id="menu4" class="tab-pane fade">
-                    <div class="center-block"><p><b>Americano</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Americano.png">
+                    <div class="center-block"><span class="mobile-coffee-name">Americano</span>
+                        <p><span>Americano</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
+                                                                                                       src="../media/images/Americano.png">
                     </div>
                 </div>
                 <div id="menu5" class="tab-pane fade">
-                    <div class="center-block"><p><b>Espresso</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Espresso.png">
+                    <div class="center-block"><span class="mobile-coffee-name">Espresso</span>
+                        <p><span>Espresso</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
+                                                                                                       src="../media/images/Espresso.png">
                     </div>
                 </div>
                 <div id="menu6" class="tab-pane fade">
-                    <div class="center-block"><p><b>Macchiato</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Macchiato.png">
+                    <div class="center-block"><span class="mobile-coffee-name">Macchiato</span>
+                        <p><span>Macchiato</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
+                                                                                                       src="../media/images/Macchiato.png">
                     </div>
                 </div>
                 <div id="menu7" class="tab-pane fade">
-                    <div class="center-block"><p><b>Flat White</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class="" src="../media/images/Flat-White.png">
+                    <div class="center-block"><span class="mobile-coffee-name">Flat White</span>
+                        <p><span>Flat White</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
+                                                                                                       src="../media/images/Flat-White.png">
                     </div>
                 </div>
             </div>
@@ -128,7 +139,6 @@
     <div class="personal-coffee col-sm-12">
     <div class="col-lg-4 text-center">
         <h2>Personalise your Coffee</h2>
-        <br>
         <p>At <b>Starbex</b> we understand everyone is different. So here is an insight into how you can personalise
             your coffee when you come into the store. <br> Click on each step!</p>
     </div>
@@ -149,14 +159,6 @@
                         Coffee bean, a delicacy that many coffee shops overlook. We stock beans with varying
                         strengths and origins including Columbia and Guatemala.
                     </p>
-                        <div class="text-center">
-                            <img class="personalise-img"
-                                 style="-ms-transform: rotate(5deg); -webkit-transform: rotate(5deg); transform: rotate(5deg);"
-                                 src="../media/images/Beans1.jpg">
-                            <img class="personalise-img"
-                                 style="-ms-transform: rotate(-4deg); -webkit-transform: rotate(-4deg); transform: rotate(-4deg);"
-                                 src="../media/images/Beans2.jpg">
-                        </div>
                     </div>
                 </div>
             </div>
@@ -172,14 +174,6 @@
                         selection for
                         all you lucky customers. We go as far as stocking Almond Soya Milk to Rice Milk... Holy Cow!
                     </p>
-                        <div class="text-center">
-                            <img class="personalise-img"
-                                 style="-ms-transform: rotate(7deg); -webkit-transform: rotate(7deg); transform: rotate(7deg);"
-                                 src="../media/images/Milk1.jpg">
-                            <img class="personalise-img"
-                                 style="-ms-transform: rotate(-2deg); -webkit-transform: rotate(-2deg); transform: rotate(-2deg);"
-                                 src="../media/images/Milk2.jpg">
-                        </div>
                     </div>
                 </div>
             </div>
@@ -194,14 +188,6 @@
                     <div class="panel-body"><p><b>Choose your Flavour</b> Vanilla syrup, Hazelnut syrup ...whatever you
                         fancy! Finally add some flavour to your coffee to really cure that morning craving.
                     </p>
-                        <div class="text-center">
-                            <img class="personalise-img"
-                                 style="-ms-transform: rotate(-5deg); -webkit-transform: rotate(-5deg); transform: rotate(-5deg);"
-                                 src="../media/images/Spice1.jpg">
-                            <img class="personalise-img"
-                                 style="-ms-transform: rotate(2deg); -webkit-transform: rotate(2deg); transform: rotate(2deg);"
-                                 src="../media/images/Spice2.jpg">
-                        </div>
                     </div>
                 </div>
             </div>
