--- a/templates/About.html
+++ b/templates/About.html
@@ -33,7 +33,8 @@
                 Mr Beano
             </h2>
             <p>
-                Key member of <b>Starbex</b> in charge of sourcing the freshest and most interesting coffee products. Ut enim ad
+                Key member of <b>Starbex</b> in charge of sourcing the freshest and most interesting coffee products. Ut
+                enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris.
             </p>
         </div>
@@ -59,6 +60,18 @@
                 minim veniam, quis nostrud exercitation ullamco laboris.
             </p>
         </div>
+    </div>
+
+
+    <div class="About-info col-sm-12"><p><span>Our Aim</span> is to provide the <span>freshest</span> coffees to our
+        customers in a
+        <span>friendly</span> environment. Our staff go above and beyond for our customers making sure everyone leaves
+        with a smile on their face. We source the most <span>unique</span> coffee bean flavours to tailor to everyones
+        needs along
+        with personalising your drink. With the easy and <span>quick</span> subscription method to buying coffees all
+        our customers have to do is show us their profile page on their phone so we can scan their code hassle free.
+        We aim to integrate the <span>community</span> with our online blogs and forums as well as hosting various
+        events in <span>Starbex.</span></p>
     </div>
 
     <div class="choices-coffee col-sm-12">
