--- a/templates/forum/forum.html
+++ b/templates/forum/forum.html
@@ -33,4 +33,27 @@
     </p>
 </section>
 {% endfor %}
+<hr>
+{% if subjects.has_other_pages %}
+  <ul class="pagination">
+    {% if subjects.has_previous %}
+      <li><a href="?page={{ subjects.previous_page_number }}">&laquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&laquo;</span></li>
+    {% endif %}
+    {% for i in subjects.paginator.page_range %}
+      {% if subjects.number == i %}
+        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+      {% else %}
+        <li><a href="?page={{ i }}">{{ i }}</a></li>
+      {% endif %}
+    {% endfor %}
+    {% if subjects.has_next %}
+      <li><a href="?page={{ subjects.next_page_number }}">&raquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&raquo;</span></li>
+    {% endif %}
+  </ul>
+{% endif %}
+
 {% endblock %}
