--- a/templates/Profile/profile.html
+++ b/templates/Profile/profile.html
@@ -63,7 +63,7 @@
         <div class="col-sm-3">
             {% if subscription_valid == False %}<a href={% url 'delete_profile' %}>delete account</a><br>{% endif %}
             {% if subscription_valid == True %}
-                <a class="delete_profile" data-toggle="modal" data-target="#myModal">delete account</a><br>{% endif %}
+                <button class="delete_profile" data-toggle="modal" data-target="#myModal">delete account</button><br>{% endif %}
         </div>
         <div class="col-sm-3">
             <a href='#'>cancel subscription</a><br>
