Added Forum data, pagination & changed some of the layouts. Added a first time logon link to FAQs forum subject and a link to the FAQs forum subject from the contact page. Updated Purchases info.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -777,6 +777,8 @@ input[type=text]:focus, textarea:focus {
 
 .poll-title {
     margin: 0 0 5px 0;
+    font-size: 14px;
+    text-align: center;
 }
 
 .thread-image {
