--- a/templates/contact.html
+++ b/templates/contact.html
@@ -54,7 +54,7 @@
           </tr>
         </tbody>
       </table>
-
+    <a href="/threads/1"><p class="text-center">Not what you're looking for? Click the <b>Link to FAQs</b></p></a>
     </div>
 
     <div class="contact-map col-lg-8">
